Z-Index issue of disabled state with file open dialog

--- a/css/ninja.css
+++ b/css/ninja.css
@@ -655,7 +655,7 @@ body section .dragging { opacity: 0.4; }
 
 body .main .dragOver:not(.dragging) { background-color: #917B56; }
 
-.panelDisabled { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999; color: white; text-align: center; line-height: 100px; box-shadow: inset 0 0 14px #111111; background: rgba(30, 30, 30, 0.7); }
+.panelDisabled { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 6000; color: white; text-align: center; line-height: 100px; box-shadow: inset 0 0 14px #111111; background: rgba(30, 30, 30, 0.7); }
 
 .menuBar { width: 100%; border-style: solid; border-width: 1px; height: 22px; color: white; background: #474747; border-color: black; }
 
