--- a/scss/imports/scss/_PanelUI.scss
+++ b/scss/imports/scss/_PanelUI.scss
@@ -1262,7 +1262,7 @@ body .main .dragOver:not(.dragging) {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 9999;
+  z-index: 6000;
   color: white;
   text-align: center;
   line-height: 100px;
